src/css/content/_section-footer.scss
// Section Footer
.section-footer {
  color: $color-fg-light;
  float: left;
  font-size: ($ratio-text-section-footer * 1rem);
  width: 100%;

  p {
    margin-bottom: 0;
  }

  a {
    text-decoration: none;
  }

  @media (min-width: $breakpoint-full) {
    line-height: ($line-height-h1 * $ratio-text-h1 / $ratio-text-section-footer);
    margin-right: $width-gap;
    position: absolute;
    right: 100%;
    text-align: right;
    width: $width-supplement;
    z-index: 1;
  }
}

